2.9.2
-----
1. Map JPG icons as well as PNG icons.
2. Add icon mapping for Accuradio.

2.9.1
-----
1. Translation updates.
2. Remove trailing percentage sign from voltage display.
3. Add file selector to more items.
4. Add restart icon to main menu icon if LMS indicates server needs restart.
5. Only scroll information dialog if plugin status received no more than 1.5
   seconds after opening.
6. Try not to duplicate sample rate in tech info.
7. When checking what 'other' sources to add for search, use case-insensitive
   name check.

2.9.0
-----
 1. Fix swipe to change info view tab.
 2. Another attempt to work-around long-press on 'Manage players' entry causing
    an entry in sync dialog to get checked.
 3. Handle "radioparadise:" URLs when showing track source.
 4. Don't show 'Internet/Other' beside tech info.
 5. Use space to separate tech info.
 6. Better shuffle albums icon.
 7. Add swipe left/right on cover to change track.
 8. Re-factor language handling.
 9. Allow other LMS plugins to register Javascript and dialogs.
10. Optionally collapse discs of multi-disc albums - either always collapse, or
    when 200 or more tracks. Setting is controlled server-side.
11. Fix browser-context menu for text fields in browse list.
12. Add player voltage to 'Information' dialog.
13. Remove code to work-around LMS returning incorrect queue size. Queue is
    still corrupt and causes flashing.
14. If LMS returns less queue items than its size, just add blank items.

2.8.4
------
1. Remove hover from list in 'Synchronise' dialog to work-around item being
   selected after long-press of 'Manage players' in players menu.
2. Close players menu 3/4 of a second after long-press on 'Manage players'
   entry.
3. If set to show technical info then also append this to track details when
   using 'Copy details' action.
4. Add 'BBC Sounds' to sources mapping.
5. When checking if source is already in tech info, remove spaces from source.