@@ -2,6 +2,7 @@
 -----
 1. Map JPG icons as well as PNG icons.
 2. Add icon mapping for Accuradio.
+3. Fix splitter moving on mobile browsers.
 
 2.9.1
 -----
